Sect13_Chap100-Author CRUD: initial commit

--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,12 +1,16 @@
-spring.datasource.username=bookuser
-spring.datasource.password=password
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/bookdb2?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-
+# DB User for the Application with elevated privileges
+# CHECK THE MYSQLUSERS IN SCRIPTS FOLDER
+spring.datasource.username=bookuser2
+spring.datasource.password=bookuser2
+spring.datasource.url=jdbc:mysql://localhost:3307/jt_hibernate_jpa_bookdb2?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.jpa.hibernate.ddl-auto=validate
 
-spring.sql.init.mode=always
+# NOT NECESSARY ANYMORE SINCE FLYWAY
+#spring.sql.init.mode=always
 
-spring.flyway.user=bookadmin
-spring.flyway.password=password
+# USER FOR MIGRATIONS E.G. FLYWAY USER
+spring.flyway.user=bookadmin2
+spring.flyway.password=bookadmin2
 
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# POSSIBLE BUT NOT NECESSARY IN OUR CONTEXT
+# spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
