--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,25 @@
 #spring.jpa.show-sql=true
 
-#Show SQL
+# SHOW SQL
 spring.jpa.properties.hibernate.show_sql=true
 
-#Format SQL
+# FORMAT SQL
 spring.jpa.properties.hibernate.format_sql=true
 
-#Show bind values
+# SHOW BIND VALUES
 logging.level.org.hibernate.type.descriptor.sql=trace
 
 spring.h2.console.enabled=true
 
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;MODE=MYSQL;DATABASE_TO_LOWER=TRUE;CASE_INSENSITIVE_IDENTIFIERS=TRUE
 spring.datasource.username=sa
-spring.datasource.password=password
+spring.datasource.password=sa
 spring.jpa.database=mysql
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=validate
-spring.jpa.defer-datasource-initialization=false
+
+# NOT NECESSARY DEFAULT VALUE
+# spring.jpa.defer-datasource-initialization=false
+
+# POSSIBLE BUT NOT NECESSARY IN OUR CONTEXT
+# spring.datasource.driver-class-name=org.h2.Driver
